correções de links

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
     <div>
         <header>
             <img src="assets/perfil.png" alt="Foto de perfil de Geovane" class="profile-pic">
-            <h1>@gesilva_26</h1>
+            <h1>Geovane Henrique</h1>
+            <h1>QueijoDev</h1>
             <p>Desenvolvedor Front-end</p>
         </header>
 
         <main>
             <ul class="link-list">
                 <li>
-                    <a href="https://github.com/Besk4r" target="_blank" rel="noopener noreferrer">
+                    <a href="https://github.com/QueijoDev" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-github"></i>
                         <span>GitHub</span>
                     </a>
