correção no container

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         <i class="fas fa-moon"></i>
     </button>
 
-    <div>
+    <div class="container">
         <header>
             <img src="assets/perfil.png" alt="Foto de perfil de Geovane" class="profile-pic">
-            <h1>Geovane Henrique</h1>
-            <h1>QueijoDev</h1>
+            <h1>Geovane Henrique <br> QueijoDev</h1>
             <p>Desenvolvedor Front-end</p>
         </header>
 
@@ -59,7 +58,7 @@
             </ul>
         </main>
         <footer>
-            <p>Feito por Geovane Henrique</p>
+            <p>desenvolvido por Geovane Henrique</p>
         </footer>
     </div>
     
